code/typescript/PAEngine/v2/docs/ColumnStatisticsApi.md
# paengine.ColumnStatisticsApi

All URIs are relative to *https://api-sandbox.factset.com*

Method | HTTP request | Description
------------- | ------------- | -------------
[**getPAColumnStatistics**](ColumnStatisticsApi.md#getPAColumnStatistics) | **GET** /analytics/lookups/v2/engines/pa/columnstatistics | Get PA column statistics



## getPAColumnStatistics

> {String: ColumnStatistic} getPAColumnStatistics()

Get PA column statistics

This endpoint lists all the column statistics that can be applied to a PA column.

### Example

```javascript
const { ApiClient, ColumnStatisticsApi } = require('@factset/sdk-paengine');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new ColumnStatisticsApi();

// Call api endpoint
apiInstance.getPAColumnStatistics().then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


### Parameters

This endpoint does not need any parameter.

### Return type

[**{String: ColumnStatistic}**](ColumnStatistic.md)

### Authorization

[FactSetApiKey](../README.md#FactSetApiKey), [FactSetOAuth2](../README.md#FactSetOAuth2)

### HTTP request headers

- **Content-Type**: Not defined
- **Accept**: application/json

